--- a/.ncmpcpp/config
+++ b/.ncmpcpp/config
@@ -4,8 +4,8 @@
 #
 ## set it in order to make tag editor and renaming files work properly
 #
-mpd_host = "/home/papin_g/.mpd/socket"
-# mpd_host = "localhost"
+# mpd_host = "/home/papin_g/.mpd/socket"
+mpd_host = "localhost"
 mpd_port = "6600"
 mpd_music_dir = "/mnt/media/Musique"
 # mpd_connection_timeout = "5"
