--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+#    -*- mode: conf -*-
 # usage:
 # git config --global core.excludesfile ~/.gitignore
 
@@ -13,8 +14,13 @@ cscope.out
 # Emacs backup files
 *~
 
-# Compiled source #
-###################
+# ebrowse file
+BROWSE
+
+# Valgrind "core" files
+vgcore.*
+
+# Compiled source
 *.o
 *.class
 *.dll
@@ -22,9 +28,9 @@ cscope.out
 *.o
 *.so
 *.a
+core
 
-# Packages #
-############
+# Packages
 # it's better to unpack these files and commit the raw source
 # git has its own built in compression methods
 *.7z
@@ -36,14 +42,12 @@ cscope.out
 *.tar
 *.zip
 
-# Logs and databases #
-######################
+# Logs and databases
 *.log
 *.sql
 *.sqlite
 
-# OS generated files #
-######################
+# OS generated files
 .DS_Store?
 ehthumbs.db
 Icon?
